Fix issue on mobile when scrolling fast and see background color

--- a/src/index.css
+++ b/src/index.css
@@ -102,9 +102,12 @@
 }
 html {
     scroll-behavior: smooth;
+    overflow-x: clip;
 }
 body {
     -webkit-font-smoothing: antialiased;
+    background-color: #1e1f22;
+    overflow-x: clip;
 }
 
 @media (prefers-reduced-motion: reduce) {
